--- a/examples/templates/examples/drink_create.html
+++ b/examples/templates/examples/drink_create.html
@@ -1,3 +1,7 @@
+{% extends "examples/base.html" %}
+
+
+{% block content %}
 <h1>Create Drink</h1>
 
 <form action="" method="post">
@@ -5,3 +9,4 @@
     {{ form }}
 <input type="submit" value="Create" />
 </form>
+{% endblock %}
